--- a/Footinder/Views/Decisions/Index.cshtml
+++ b/Footinder/Views/Decisions/Index.cshtml
@@ -1,17 +1,22 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" ></link>
 </head>
 <body>
-    @RenderBody()
+
+    <h2>title</h2>
+    <div id="content"></div>
 
     @Scripts.Render("~/bundles/jquery")
     <script src="http://fb.me/react-0.12.2.js"></script>
     <script src="@Url.Content("~/Scripts/decisions.jsx")"></script>
-    @RenderSection("scripts", required: false)
 </body>
 </html>
