Added Gravatar images

--- a/Footinder/Views/LunchGroup/Index.cshtml
+++ b/Footinder/Views/LunchGroup/Index.cshtml
@@ -17,7 +17,7 @@
     @foreach (var user in Model.GroupUsers)
     {
         <li>
-            <img src="@user.Name"/> 
+            <img src="@user.GravatarUri"/> 
             <span>@user.Name</span>
         </li>
     }
