--- a/Footinder/Views/Login/Index.cshtml
+++ b/Footinder/Views/Login/Index.cshtml
@@ -8,14 +8,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="@Url.Content("~/Style/login.css")" />
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: {
+                families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic", "Montserrat:400,700", "Merriweather:300,400,700,900", "Petit Formal Script:regular"]
+            }
+        });
+    </script>
 </head>
 <body>
 
-    <div id="content"></div>
+    <div id="content" class="header-section"></div>
 
     @Scripts.Render("~/bundles/jquery")
-    <script src="http://fb.me/react-0.12.2.js"></script>
+    <script src="http://fb.me/react-0.12.2.min.js"></script>
     <script src="@Url.Content("~/Scripts/login.jsx")"></script>
 </body>
 </html>
