--- a/Footinder/Views/YourGroup/Index.cshtml
+++ b/Footinder/Views/YourGroup/Index.cshtml
@@ -2,9 +2,9 @@
 
 @{
     ViewBag.Title = "title";
-    Layout = "_Layout";
+    Layout = null;
 }
-
+<div style="width: 100%; margin: auto 100%"></div>
 <h2>Here's where you're dining today </h2>
 
 <img src="@Model.Restaurant.LogoUri" />
