--- a/Footinder/Style/decisions.css
+++ b/Footinder/Style/decisions.css
@@ -26,6 +26,11 @@ body {
   transform: translateY(-50%);
 }
 
+
+.decide-button {
+    cursor: pointer;
+}
+
 h1 {
   margin: 10px 0px 24px;
   font-family: Montserrat, sans-serif;
@@ -266,29 +271,33 @@ p {
 }
 .yes_icon {
   position: absolute;
-  left: 0px;
+  
   top: 100px;
-  bottom: 100px;
+  right: 0px;
+  bottom: 0px;
 }
 .yes_icno_svg {
   position: absolute;
-  left: 70px;
-  top: 0px;
-  bottom: 0px;
   max-width: 140px;
-}
-.no_icon_svg {
-  position: absolute;
+  
   top: 0px;
   right: 70px;
   bottom: 0px;
+}
+.no_icon_svg {
+  position: absolute;
   max-width: 110px;
+  
+  left: 70px;
+  top: 0px;
+  bottom: 0px;
 }
 .no_icon {
   position: absolute;
-  top: 86px;
-  right: 0px;
-  bottom: 0px;
+  
+  left: 0px;
+  top: 100px;
+  bottom: 100px;
 }
 @media (max-width: 991px) {
   .button {
