--- a/Footinder/Views/Login/Index.cshtml
+++ b/Footinder/Views/Login/Index.cshtml
@@ -10,6 +10,7 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="@Url.Content("~/Style/login.css")" />
+    <link href="/Images/Soluto.ico" rel="shortcut icon" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
     <script>
         WebFont.load({
