--- a/Footinder/Views/YourGroup/Index.cshtml
+++ b/Footinder/Views/YourGroup/Index.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="@Url.Content("~/Style/webflow.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Style/yourgroup.css")" />
+    <link href="/Images/Soluto.ico" rel="shortcut icon" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
     <script>
         WebFont.load({
